@@ -172,7 +172,7 @@ def writer(filename, n_atoms=None, **kwargs):
                    starting time [0]
                *step*
                    step size in frames [1]
-               *delta*
+               *dt*
                    length of time between two frames, in ps [1.0]
 
             Some readers accept additional arguments, which need to be looked
