@@ -20,6 +20,7 @@ The rules for this file:
 
 API Changes
 
+  * ChainReader `delta` keyword deprecated in favor of `frame_dt`. (Issue #522)
   * XYZWriter can now be used as a container format for different protein models
     as well as a normal trajectory. If `n_atoms` is None (default) MDAnalysis
     assumes that it is used as a container and won't give a warning if the
@@ -37,6 +38,7 @@ Changes
   * built html doc files are no longer version controlled (Issue #491)
 
 Fixes
+  * Cleaned up `MDAnalysis.Writer` docs regarding `dt` usage. (Issue #522)
   * Fixed setup-time dependency on numpy that broke pip installs. (Issue #479)
   * Fixed unpickling errors due to lingering dead universes. (Issue #487)
   * Fixed analysis.density modules requiring the defunct `skip` attribute
